update babel lib

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sjs-dom",
-  "version": "0.2.0",
+  "version": "0.3.0",
   "description": "sdom - Dom Helper",
   "keywords": [
     "www"
@@ -10,7 +10,7 @@
   "author": "smialy",
   "repository": {
     "type": "git",
-    "url": "http://github.com/smialy/sdom"
+    "url": "http://github.com/smialy/sjs-dom"
   },
   "devDependencies": {
     "gulp": "^3.8.11",
